--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@types/react-native": "^0.72.3",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "react-native-reanimated": "^2.3.0",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-screens": "^3.8.0",
-    "react-native-safe-area-context": "^3.3.2"
+    "react-native-reanimated": "^2.17.0",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,7 +27,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.23",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
