--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@types/react-native": "^0.72.3",
+    "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.17.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
