--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "@types/react-native": "^0.72.3",
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.25.0",
