--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.7",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -18,7 +19,9 @@
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^7.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^3.4.1",
